Fix tablet layout of author photo under article. Fix spacing of tertiary nav.  (infographics, magazine issues, ...) Don't allow line break in yes tagline at the hyphone in reader- supported, for tablets.

--- a/yes/diazotheme/diazo_resources/css/yes.css
+++ b/yes/diazotheme/diazo_resources/css/yes.css
@@ -832,7 +832,7 @@ span.people-power {
   }
 
   #tertiarynav li + li a:before {
-    content: "|  ";
+    content: "|\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
   }
 
   #issuenav {
